--- a/_config.yml
+++ b/_config.yml
@@ -106,10 +106,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
+  name             : "Mark Wang"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an amazing person."
-  location         : "Somewhere"
+  bio              : "Master of International Economics from UC San Diego, co-author of Demographics with Chinese Characters."
+  location         : "San Diego, CA"
   email            :
   links:
     - label: "Email"
