Chang Linkedin link

--- a/_config.yml
+++ b/_config.yml
@@ -111,7 +111,7 @@ author:
   bio              : "Master of Data Science student at University of British Columbia. Projects include natural language processing, geospatial analyses, time series and applied economics research."
   location         : "Washington, DC"
   email            :
-  linkedin         : "kangyumarkwang"
+  linkedin         : "kmarkwang"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
