--- a/_config.yml
+++ b/_config.yml
@@ -108,14 +108,14 @@ analytics:
 author:
   name             : "Mark Wang"
   avatar           : "/images/Mark_profile.png"
-  bio              : "Master of Data Science student at University of British Columbia. Projects include natural language processing, geospatial analyses, time series and applied economics research."
+  bio              : "Master of Data Science student at University of British Columbia with data analytics experience in finance, econometrics and consulting. I am proficient in machine learning, time series and geospatial modeling, natural language processing, and applied economics research."
   location         : "Washington, DC"
-  email            :
+  email            : "changguang@outlook.com"
   linkedin         : "kmarkwang"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      url: changguang@outlook.com
+      url: mailto:changguang@outlook.com
     - label: "Website"
       icon: "fas fa-fw fa-link"
       # url: "https://your-website.com"
