--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ locale                   : "en-US"
 title                    : "Mark Wang"
 title_separator          : "-"
 name                     : "Mark Wang's projects"
-description              : "Data science student at UBC with work experience in sales prediction, NLP and management consulting."
+description              : "Data science student at UBC with work experience in finance, sales prediction, NLP, econometrics and management consulting."
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
